Fix - UI spacing issues in home page

--- a/MvcWebRole1/Content/custom.css
+++ b/MvcWebRole1/Content/custom.css
@@ -45,19 +45,16 @@
     width: 93%;
     margin-bottom: 20px;
 }
-
-
 .news-container {
     width: 100%;
 }
-
 .movie-list ul, .critics-container ul, .upcoming-movie-list ul, .others-movie-list ul {
     float: left;
     list-style: none;
     padding: 0px;
     margin: 0px;
     width: 100%;
-    height: 425px;
+    height: 415px;
 }
 
     .movie-list ul li, .critics-container ul li, .upcoming-movie-list ul li, .others-movie-list ul li {
