--- a/MvcWebRole1/Content/styles/mm.moviedetails.css
+++ b/MvcWebRole1/Content/styles/mm.moviedetails.css
@@ -2,7 +2,7 @@
     float: left;
     width: 90%;
     text-align: center;
-    margin-top: 20px;
+    /*margin-top: 20px;*/
 }
 
 .viewingDiv {
